<resources>
    <string name="app_name" translatable="false">WahyuStoryApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="let_s_make_an_account">Let\'s Make an Account!</string>
    <string name="register">Register</string>
    <string name="didn_t_have_account">Didn\'t Have Account?</string>
    <string name="yu_story">Yu Story</string>
    <string name="add_story">Add Story</string>
    <string name="image_story">Image Story</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="image_placeholder" translatable="false">Image Placeholder</string>
    <string name="take_picture">take picture</string>
    <string name="description">Add your description (optional)</string>
    <string name="upload" translatable="false">UPLOAD</string>
    <string name="detail" translatable="false">Detail</string>
    <string name="date_format">Created at %s</string>
    <string name="app_bar_image">App bar image</string>
    <string name="credit" translatable="false">Credit</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="refresh">Refresh</string>
    <string name="search">Search</string>
    <string name="all_image_is_provided_by">All image is provided by :</string>
    <string name="change_language">Change Language</string>
    <string name="there_s_two_language_you_can_choose_indonesia_and_english">There\'s two language you can choose : Indonesia and English</string>
    <string name="night_mode">Night Mode</string>
    <string name="appwidget_text" translatable="false">EXAMPLE</string>
    <string name="add_widget" translatable="false">Add widget</string>
    <string name="app_widget_description" translatable="false">This is an app widget description</string>
    <string name="empty_text">Empty</string>
    <string name="detail_image">Detail Image</string>
    <string name="show_maps">Show Maps</string>
    <string name="add_location">Add location</string>
    <string name="submit_location">Submit Location</string>
    <string name="profile_icon" translatable="false">profile icon</string>
    <string name="check_location">Check Location</string>
</resources>