<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_baseline_refresh_24"
        android:title="@string/refresh"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_maps"
        android:icon="@drawable/ic_baseline_location_on_24"
        app:showAsAction="ifRoom"
        android:title="@string/show_maps"/>


    <item
        android:id="@+id/action_setting"
        android:enabled="true"
        android:icon="@drawable/ic_launcher_foreground"
        android:title="@string/settings" />

    <item
        android:id="@+id/action_credit"
        android:title="@string/credit"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:enabled="true"
        android:title="@string/logout"
        app:showAsAction="never" />

</menu>